add: dbcontext, repositories, first migration, database connection

--- a/OutOfTheBox.Api/appsettings.json
+++ b/OutOfTheBox.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "OutOfTheBoxDBConnectionString": "Data Source = (localdb)\\mssqllocaldb; initial catalog = OutOfTheBox; integrated security = true;"
+  }
 }
