add: crud-operations

--- a/OutOfTheBox.Logic/OutOfTheBox.Logic.csproj
+++ b/OutOfTheBox.Logic/OutOfTheBox.Logic.csproj
@@ -7,7 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="12.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\OutOfTheBox.Domain\OutOfTheBox.Domain.csproj" />
+    <ProjectReference Include="..\OutOfTheBox.Dto\OutOfTheBox.Dto.csproj" />
   </ItemGroup>
 
 </Project>
