--- a/OutOfTheBox.Dto/OutOfTheBox.Dto.csproj
+++ b/OutOfTheBox.Dto/OutOfTheBox.Dto.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\OutOfTheBox.Enum\OutOfTheBox.Enum.csproj" />
+  </ItemGroup>
+
 </Project>
